fix: txt extraction